name:                keyl
version:             0.2.0.0
synopsis:            Pie - A Small Dependent Type Language
description:         Please see README.md
homepage:            https://github.com/gwasser/keyl#readme
license:             GPL-3
license-file:        COPYING
author:              Garret Wassermann
maintainer:          geewass@member.fsf.org
copyright:           2023 Garret Wassermann
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Pie.Core.AST,
                       Pie.Core.Context,
                       Pie.Parser.Combinators,
                       Pie.REPL.Pretty,
                       Pie.REPL.Interpreter
  build-depends:       base,
                       utf8-string,
                       text,
                       array,
                       containers,
                       transformers,
                       mtl,
                       pretty,
                       parsec
  default-language:    Haskell2010

executable keyl
  hs-source-dirs:      app
  other-modules:       Paths_keyl
  main-is:             InterpreterMain.hs
  build-depends:       base,
                       text,
                       mtl,
                       haskeline,
                       keyl
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite keyl-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       ParserTest
  main-is:             MainSpec.hs
  build-depends:       base,
                       tasty,
                       tasty-hunit,
                       keyl
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/gwasser/keyl
